Added post for the Andrew Ellis Lecture. Modified the home page to include the description in the list of posts. Added or fixed descriptions of pervious posts.

--- a/_posts/2013-02-27-AGM.md
+++ b/_posts/2013-02-27-AGM.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: "AGM - 13th March 2013"
-description: "AGM - 13th March 2013"
-category: 
+description: "Annual General Meeting. 13th March 2013"
+category: events
 tags: [AGM]
 ---
 {% include JB/setup %}
